--- a/CHANGES
+++ b/CHANGES
@@ -32,7 +32,7 @@
   Ryan told me that fmod was not included in libm.  Oops.
   strstr(whatever,"") returned NULL, not whatever.  Found by a new test
     suite entry for strstr that I wrote.
-  Thomas Oggrisegg suggested or sent patches for the following:
+  Thomas Ogrisegg suggested or sent patches for the following:
     add <asm/sigcontext.h> for profiling support.
     make strncpy a #define in string.h to save a few bytes.
     an i386 assembler getenv implementation (roughly half the size)
