--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
 0.16:
   "diet -v" or "diet -Os" segfaulted without further arguments.
+  Andre found two very embarassing bugs in my four lines of md5 glue.
+    I need to get more sleep.
 
 0.15:
   vfork sucks.  I reverted to the old behavior where vfork==fork.
