small bug and mention diet.c in PORTING

--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@
   provide a prototype for usleep.
   make __dtostr work on ARM by using long instead of long long.
     Idea by Dirk Engling.
+  fix an argument counting bug in *scanf (Thomas Ogrisegg)
 
 0.15:
   vfork sucks.  I reverted to the old behavior where vfork==fork.
