--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,7 @@
   make __dtostr work on ARM by using long instead of long long.
     Idea by Dirk Engling.
   fix an argument counting bug in *scanf (Thomas Ogrisegg)
+  Forgot an #endif in asm/sigcontext.h (Mike Castle)
 
 0.15:
   vfork sucks.  I reverted to the old behavior where vfork==fork.
