add getline and getdelim to libcompat

--- a/CHANGES
+++ b/CHANGES
@@ -18,6 +18,8 @@
     fix struct termios on non-x86 architectures
   printf("%+05d\n",500) was broken (Raimar Falke told me, Olaf fixed it)
   create libcompat.a (and move daemon to it)
+  add getdelim and getline
+  *printf now recognize 'z' integer flag (and ignore it)
 
 0.15:
   vfork sucks.  I reverted to the old behavior where vfork==fork.
