FIXED a bug in *scanf (there was no long long handling). one step more to unified libdl/dynlinker (still 3 functions missing).

--- a/CHANGES
+++ b/CHANGES
@@ -21,6 +21,7 @@
   add getdelim and getline
   *printf now recognize 'z' integer flag (and ignore it)
   Dirk Engling provided a strcpy.S for ARM.
+  Olaf: fixed *scanf familie. It hadn't wored with "long long".
 
 0.15:
   vfork sucks.  I reverted to the old behavior where vfork==fork.
