--- a/CHANGES
+++ b/CHANGES
@@ -23,6 +23,7 @@
   Dirk Engling provided a strcpy.S for ARM.
   Olaf: fixed *scanf familie. It hadn't wored with "long long".
   Hans Lermen fixed i386/getenv.S
+  diet -Os no longer discards -fpic and -fno-pic
 
 0.15:
   vfork sucks.  I reverted to the old behavior where vfork==fork.
