- so now the new dynamic-linker is working; some more tests and then it's   the default... - modified the old one so it still can be used. - recode the DEBUG code so it can be used in the minimalistic syscall   enviroment of the libdl.so/dynlinker (only a sub-subset is available) All in one line:   libdl.so+dynlinker < 10k on x86 :)

--- a/libdl/README
+++ b/libdl/README
@@ -2,6 +2,14 @@ this is the experimental libdl
 
 written by Olaf Dreesen
 
+Mon Mar 11 19:44:20 CET 2002
+
+the unified libdl/dynlinker now seems to stand the NORMAL usage so I think
+it should be tested outside my CLEANROOM :)
+
+TODO: code for other archs than i386 and arm
+
+
 Thu Nov  1 18:41:36 MET 2001
 
 ufffff.... now the libdl code can be used in the libdl.so :)
