--- a/dynlinker/README
+++ b/dynlinker/README
@@ -7,6 +7,12 @@ Replacement for standard ld.so
 
 It is still test-code only and depends on dietlibc/libdl code
 
+
+Mon Mar 11 19:44:20 CET 2002
+
+This is now near obsolete code...
+
+
 Thu Nov  1 17:35:15 MET 2001
 
 now "interact" with the loaded libdietc.so ....
