sys/ipc.h now includes sys/types.h

--- a/CHANGES
+++ b/CHANGES
@@ -26,6 +26,7 @@
   diet -Os no longer discards -fpic and -fno-pic
   fix i386 rand/random to use correct RAND_MAX (thanks, Jaroslav
     Macodiseas)
+  sys/ipc.h now includes sys/types.h
 
 0.15:
   vfork sucks.  I reverted to the old behavior where vfork==fork.
