--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 0.17:
   fix several bugs in getservent_r
+  Gunnar Ritter reported the following:
+    moved tcgetpgrp and tcsetpgrp to unistd.h
+    adjusted lstat->lstat64 #define to make it work with function pointers
+    move __dietlibc__ #define from features.h to diet
 
 0.16:
   "diet -v" or "diet -Os" segfaulted without further arguments.
