fix embarassing __dtostr bug (thanks, Andre)

--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@
   Andreas Krennmair sent a patch to add the BSD regex interface to
     libcompat
   add contrib/dprof.c, also from Andreas.
+  Andre noticed that __dtostr never sets first to false.  Oops!
 
 0.16:
   "diet -v" or "diet -Os" segfaulted without further arguments.
