--- a/TODO
+++ b/TODO
@@ -19,7 +19,8 @@ gethost/netent -> parselib
 Look at qsort (the make test suite exhibits the worst case)
 
 Make __dtostr do scientific notation.
-fix %g in printf.  They are more or less completely b0rken.
+fix %g in printf.  They are more or less completely b0rken (in
+  particular rounding the last digit does not work).
 
 qmail-queue dumps core since we added vfork.  Editing fork.h to #define
   vfork to fork works.  What happens here?
