abort() did not flush all streams

--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,7 @@
   Andre noticed that __dtostr never sets first to false.  Oops!
   Andre has provided a largely untested patch that seems to fix the problem.
   Igor Gilitschenski sent a patch for the "%8.7lx" issue.
+  abort did not flush all stdio streams
 
 0.16:
   "diet -v" or "diet -Os" segfaulted without further arguments.
