--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,7 @@
   write a stupid malloc checker (contrib/debug-realloc.c) to help me
     debug my regular expressions.  Please read contrib/debug-realloc.txt
   our i386 memchr,memcmp were broken for the count=0 case
+  fix DNS domain search
 
 0.16:
   "diet -v" or "diet -Os" segfaulted without further arguments.
