--- a/TODO
+++ b/TODO
@@ -24,3 +24,8 @@ qmail-queue dumps core since we added vfork.  Editing fork.h to #define
   vfork to fork works.  What happens here?
 
 use TCP if buf[2]&2 is non-zero in DNS answers.
+
+look at mktime: "Falls tm_isdst == -1 gesetzt, so sollte mktime
+versuchen herauszufinden, ob Sommerzeit eingestellt ist (und laut linux
+manpage auch tzname setzen), ansonsten die angegebene DST
+berücksichtigen."
