--- a/TODO
+++ b/TODO
@@ -36,3 +36,5 @@ remove strings.h?  Matthias Andree says it confuses
 better rand()?
 
 try to make zebra compile.
+
+getdents64 needs large file backwards compatibility as well (?)
