perror now allows message==NULL like glibc

--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@
     yet, but it's a start.
   added getdents64 backwards compatibility and include it in large file
     support #defines
+  perror now checks if the message is NULL like glibc (Thomas Ogrisegg)
 
 0.17:
   fix several bugs in getservent_r
