ftell did not take ungetc into account.

--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,7 @@
   added getdents64 backwards compatibility and include it in large file
     support #defines
   perror now checks if the message is NULL like glibc (Thomas Ogrisegg)
+  ftell did not take ungetc into account (Kevin Ryde through Debian).
 
 0.17:
   fix several bugs in getservent_r
