--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,7 @@
     support #defines
   perror now checks if the message is NULL like glibc (Thomas Ogrisegg)
   ftell did not take ungetc into account (Kevin Ryde through Debian).
+  Thomas Ogrisegg sent a port to IA64!
 
 0.17:
   fix several bugs in getservent_r
