--- a/TODO
+++ b/TODO
@@ -38,3 +38,6 @@ better rand()?
 try to make zebra compile.
 
 getdents64 needs large file backwards compatibility as well (?)
+
+add PA-RISC socket calls that use the syscalls and not go through
+socketcall.
