--- a/TODO
+++ b/TODO
@@ -41,3 +41,8 @@ getdents64 needs large file backwards compatibility as well (?)
 
 add PA-RISC socket calls that use the syscalls and not go through
 socketcall.
+
+ucontext.h (that looks nasty)
+
+printf %e
+
