--- a/CHANGES
+++ b/CHANGES
@@ -21,6 +21,7 @@
   add pa-risc socketcall (but see TODO) (Felix J. Ogris)
   fix *rand48 initialization (Kevin Ryde)
   fnmatch infinite loop fix (Piotr Esden-Tempski)
+  make signal() into a sigaction wrapper function
 
 0.17:
   fix several bugs in getservent_r
