--- a/CHANGES
+++ b/CHANGES
@@ -24,6 +24,7 @@
   make signal() into a sigaction wrapper function
   add memrchr (Emil)
   remove __attribute__((const)) from getpid() (Yuri Kozlov)
+  make getserv* also work if proto is NULL (Jens Låås)
 
 0.17:
   fix several bugs in getservent_r
