--- a/CHANGES
+++ b/CHANGES
@@ -26,6 +26,7 @@
   remove __attribute__((const)) from getpid() (Yuri Kozlov)
   make getserv* also work if proto is NULL (Jens Låås)
   now clone on parisc works (Thomas Ogrisegg)
+  getopt* fix from Thomas Walpuski
 
 0.17:
   fix several bugs in getservent_r
