--- a/CHANGES
+++ b/CHANGES
@@ -27,6 +27,7 @@
   make getserv* also work if proto is NULL (Jens Låås)
   now clone on parisc works (Thomas Ogrisegg)
   getopt* fix from Thomas Walpuski
+  add syscall() to libcompat (Thomas Ogrisegg)
 
 0.17:
   fix several bugs in getservent_r
