--- a/CHANGES
+++ b/CHANGES
@@ -31,6 +31,7 @@
   fix strncpy and strrchr i386 assembly versions for dynamic linking
     (John K. Holm)
   allow short option grouping in getopt* (Ralf Wildenhues)
+  make the DNS resolver IPv6 transport capable (WANT_IPV6_DNS)
 
 0.17:
   fix several bugs in getservent_r
