document killpg and ia64 changes

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 0.19:
   current gcc cvs makes __thread a keyword (Eric Troan)
   be more strict regarding hostile DNS packets.
+  fix ia64 syscalls compile snafu (forgot to include ia64/syscalls.h)
+  make killpg a function and not a macro (broke bash 2.05b)
 
 0.18:
   add stpcpy (from Thomas Ogrisegg)
