--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
   fix ia64 start code and unified syscall (me)
   add sparc/strlen.S from Thomas Ogrisegg
   add more space to ARM __jmp_buf in setjmp.h (Andre)
+  fix libcompat/syscall.S (did't compile on arm)
 
 0.18:
   add stpcpy (from Thomas Ogrisegg)
