--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 0.20:
   umount and stime for x86_64 (Gwenole Beauchesne)
+  some malloc fixes for very big numbers (Enrico Scholz, me)
 
 0.19:
   current gcc cvs makes __thread a keyword (Eric Troan)
