--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 0.20:
   umount and stime for x86_64 (Gwenole Beauchesne)
   some malloc fixes for very big numbers (Enrico Scholz, me)
+  x86_64 unified syscall did not preserve rbx violating ABI (Gwenole)
 
 0.19:
   current gcc cvs makes __thread a keyword (Eric Troan)
