--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
   some malloc fixes for very big numbers (Enrico Scholz, me)
   x86_64 unified syscall did not preserve rbx violating ABI (Gwenole)
   realpath fix if path did not contain a slash (Gwenole)
+  add ucontext
 
 0.19:
   current gcc cvs makes __thread a keyword (Eric Troan)
