slightly optimize Makefile add asm/statfs.h

--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,7 @@
   x86_64 unified syscall did not preserve rbx violating ABI (Gwenole)
   realpath fix if path did not contain a slash (Gwenole)
   add ucontext
+  add asm/statfs.h to work around people using <linux/fs.h>
 
 0.19:
   current gcc cvs makes __thread a keyword (Eric Troan)
