--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
   use gcc's size_t, ptrdiff_t and wchar_t types (Olaf)
   use -G 8 on MIPS to reduce code size (Johannes Stezenbach)
   add munlock (Jens Låås)
+  argh, atexit fell victim to bit rot (or maybe Olaf)
 
 0.20:
   calloc was botched
