--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@
   argh, atexit fell victim to bit rot (or maybe Olaf)
   add WANT_INET_ADDR_DNS to make gethostbyname not look up IP numbers
     but use them to fill in the struct hostent directly.
+  signal is now a correct signal (Olaf)
 
 0.20:
   calloc was botched
