optimize a few more bytes away from the socket calls on i386

--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@
     security implications there.
   fixed regex LINEEND condition
   add .size directive to i386 syscalls
+  shove a few more bytes off the i386 socket calls
 
 0.20:
   calloc was botched
